added mock docker-compose